# llm-playground-rs

./: .gitignore  .gitpod.yml  AGENTS.md  API_INTEGRATION_GUIDE.md  Cargo.toml  DECOUPLING_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  ISSUES.md  LLM_CLIENT_REFACTORING.md  LLM_CLIENT_REFACTOR_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  MCP_INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  ROADMAP.md  SOLID_VIOLATIONS_ANALYSIS.md  TODO.md  Trunk.toml  UNIFIED_CLIENT_REFACTORING.md  VISUAL_FUNCTION_TOOL_EDITOR.md  gemini_example.json  index.html  prototype.html
src/: main.rs  main_flexible.rs
src/llm_playground/: builtin_tools.rs  event_system.rs  flexible_client.rs  flexible_playground.rs  flexible_playground_refactored.rs  flexible_playground_simple.rs  function_executor.rs  llm_processor.rs  logging.rs  mcp_client.rs  message_flow.rs  message_handler.rs  message_handlers.rs  migration.rs  mod.rs  orchestrator.rs  provider_config.rs  simple_message_flow.rs  simple_orchestrator.rs  storage.rs  types.rs  unified_client.rs
src/llm_playground/api_clients/: MIGRATION_GUIDE.md  REFACTORING_STATUS.md  SOLID_REFACTOR_SUMMARY.md  client_service.rs  conversation.rs  example_usage.rs  factory_setup.rs  gemini_client.rs  gemini_factory.rs  interfaces.rs  mcp_client.rs  message_service.rs  mod.rs  openai_client.rs  openai_factory.rs  provider_factory.rs  refactored_flexible_client.rs  refactored_openai_client.rs  traits.rs
src/llm_playground/components/: chat_header.rs  chat_room.rs  chatroom.rs  flexible_settings_panel.rs  function_call_handler.rs  function_tool_editor.rs  input_bar.rs  mcp_settings_panel.rs  message_bubble.rs  mod.rs  model_selector.rs  notification.rs  settings_panel.rs  sidebar.rs  visual_function_tool_editor.rs
src/llm_playground/examples/: mcp_integration_example.rs  unified_client_example.rs
src/llm_playground/hooks/: mod.rs  use_llm_chat.rs
