[package]
name = "llm-playground-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.77", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "KeyboardEvent",
    "Event",
    "InputEvent",
    "DomRect",
    "CssStyleDeclaration",
    "DomTokenList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.19", features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }
pulldown-cmark = "0.12.0"
